@@ -2,11 +2,13 @@ cdebconf (0.92) UNRELEASED; urgency=low
 
   [ Attilio Fiandrotti ]
   * Fixed some GTK frontend minor memory leaks and some widgets alignment.
+  * Now also the GTK frontend, like the NEWT frontend, allows the user to go
+    back by pressing the ESC key (closes: #339857).
 
   [ Frans Pop ]
   * Add Standards-Version: back in; cdebconf also provides regular packages.
 
- -- Frans Pop <fjp@debian.org>  Sun, 13 Nov 2005 00:58:38 +0100
+ -- Attilio Fiandrotti <fiandro@tiscali.it>  Sun,  4 Dec 2005 22:44:49 +0100
 
 cdebconf (0.91) unstable; urgency=low
 
